--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!-- hero/jumbotron -->
 <section class="hero">
     <div>
+      <img>C:\Users\coone\OneDrive\Desktop\projects\run-buddy\assets\images\hero-bg.jpg<img>
         <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -71,7 +72,7 @@
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
     ...
-  <h2>What We Do</h2>
+  <h2 class="section-title primary-border">What We Do</h2>
   <p>buthcer selfies chambray shabby chic gentrify readmade yr Echo Park XOX
   </p>
 </section>
@@ -79,11 +80,11 @@
 <!-- "what you do" section -->
 <section id="what-you-do" class="steps">
     ...
-  <h2>What You Do</h2>
+    <h2 class="section-title secondary-border">What You Do</h2>
 
   <div>
     <img src="./assets/images/step-1.svg" alt="" />
-    <h3>Step 1: Fill Out the Form Above.</h3>
+    <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
     <p>You're already here, so why not? You lazy bum.</p>
   </div>
 
@@ -108,9 +109,23 @@
 </section>
 
 <!-- "meet the trainers" section -->
-<section>
-  <h2>Meet The Trainers</h2>
+<section id="your-trainers" class="trainers">
+  <h2 class="section-title primary-border">
+    Meet the Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article> 
 </section>
+
+
 
 <!-- "reach out" section -->
 <section>
