--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Run Buddy</title>
 </head>
 
-  <body>
+<body>
   <!-- navigation -->
 <header>
   <h1><h1 style="color: blue; font-size: 100px;">RUN BUDDY</h1>
-      <a href="/">RESTART BUDDY #5</a>
+      <a href="/">RUN BUDDY</a>
   </h1>
   <nav><!-- Unordered list element -->
       <ul>
@@ -40,7 +40,6 @@
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
      <form>
-        
             <label for="name">Enter full name:</label>
             <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
             
@@ -79,9 +78,7 @@
 
 <!-- "what you do" section -->
 <section id="what-you-do" class="steps">
-    ...
     <h2 class="section-title secondary-border">What You Do</h2>
-
   <div>
     <img src="./assets/images/step-1.svg" alt="" />
     <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -110,8 +107,7 @@
 
 <!-- "meet the trainers" section -->
 <section id="your-trainers" class="trainers">
-  <h2 class="section-title primary-border">
-    Meet the Trainers</h2>
+  <h2 class="section-title primary-border">Meet the Trainers</h2>
     <article class="trainer">
       <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
       <div class="trainer-bio text-left">
@@ -123,24 +119,73 @@
         </p>
       </div>
     </article> 
-</section>
-
-
+<!-- second trainer bio -->
+<article class="trainer">
+  <h2 class="section-title primary-border">Meet the Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after work out" />
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article> 
+ <!--"third trainer bio"-->
+<article class="trainer">
+  <h2 class="section-title primary-border">Meet the Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article> 
+  </section>
 
 <!-- "reach out" section -->
-<section>
-  <h2>Reach Out</h2>
+<section id= "reach-out" class="contact">
+  <h2 class="section-title secondary-border">Reach Out</h2>
+  <div class= "contact-info">
+   <iframe> src="https://www.google.com/maps/embed?pb</iframe>
+    <div>
+      <h3>Run Buddy</h3>
+      <p>Any questions or concerns before signing up?
+        <br>
+        Let us know and we'll be happy to talk to you!
+      </p>
+    </div>
+    <address>
+      55 main street
+      <br>
+      some town, Ca
+      <br>
+      P: 555.RUN.BUDZ (555.786.2839)
+      <br>
+      E:
+      <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+      </div>
+      </section>
+  </div>
+
 </section>
 
-  </body>
+  
 <footer>
   <h2>❤️ Made with love by Run Buddy.</h2>
   <div>
-      <a href="#">Read Our Privacy Policy</a>
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a>
       <br>
       "2019 Run Buddy, Inc."
   </div>
-</footer>
+  </footer>
+  </body>
+</html>
 
-  </html>
-</body>
